# lunar-lander-rlhf

./: .gitignore  README.md  pyproject.toml  start_jupyter.sh  visualize_parallel.py
experiment-tracker/: mvnw  mvnw.cmd  pom.xml
experiment-tracker/src/main/java/com/lunarlander/tracker/: ExperimentTrackerApplication.java
experiment-tracker/src/main/java/com/lunarlander/tracker/controller/: ExperimentController.java
experiment-tracker/src/main/java/com/lunarlander/tracker/model/: Experiment.java
experiment-tracker/src/main/java/com/lunarlander/tracker/repository/: ExperimentRepository.java
experiment-tracker/src/main/resources/: application.properties
notebooks/: 01_baseline_ppo.ipynb  02_trajectory_collection.ipynb  03_preference_data.ipynb  04_reward_model_training.ipynb  05_aligned_ppo.ipynb
src/lunarlander/: __init__.py  db_logger.py  env_wrappers.py  preference_dataset.py  reward_model.py
