[project]
name = "lunarlander-rlhf"
version = "0.1.0"
description = "Human-Aligned PPO agent on LunarLander — RLHF-style preference learning portfolio project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[box2d]>=0.29.0",
    "stable-baselines3[extra]>=2.3.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "swig>=4.2.0",
    "imageio>=2.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lunarlander"]

[tool.uv]
dev-dependencies = []
